# chocostealer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_queries.sql  test_query.sql
.devcontainer/: devcontainer.json
chocostealer/: config.py  stealer_app.py  stealer_flask.py  stealer_flask_templates.py  stealer_script.py  stealer_streamlit.py
playground/: test_mail.py  test_queries.sql
